translation-tool/inputs/source_meta/objects/Order_Management_VAR_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>AR__c</fullName>
        <label>AR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL__c</fullName>
        <label>CL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO__c</fullName>
        <label>CO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <label>EC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA__c</fullName>
        <label>PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE__c</fullName>
        <label>PE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order_Management_VAR_Setting</label>
    <pluralLabel>Order_Management_VAR_Settings</pluralLabel>
</CustomObject>